--- a/ReadMe
+++ b/ReadMe
@@ -1,3 +1,5 @@
-This C++ program is an interpreter made by me, which given a set of language rules (LanguageRules.png in repository) you can write and execute scripts of this custom language.
+This C++ program is an interpreter made by me, which given a set of language rules (LanguageRules.png in repository)
+you can write and execute scripts of this custom language.
 
-You can also see an example of this programs output by looking at the Code-Example.png photo found on this repo page, and if you'd like to use this program after downloading the repo go to debug > Project1.exe
+You can also see an example of this programs output by looking at the Code-Example.png photo found on this repo page, 
+and if you'd like to use this program after downloading the repo go to debug > Project1.exe
